fixed alignment a bit

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -1968,7 +1968,6 @@ table.resultTable {
     border-radius: 15px;
 }
 
-
 table.time-selector {
     display: block;
     width: 90%;
@@ -1994,3 +1993,15 @@ table.time-selector td, th, tr {
     /*border-right-width: 1px;*/
 }
 
+.peak-label {
+    font-weight: bolder;
+    margin-left: auto;
+    margin-right: 10px;
+    text-align: right;
+}
+
+.brain-display{
+    margin-left: 20%;
+    margin-right: auto;
+    vertical-align: top;
+}
